--- a/FilmStock/de.lproj/Localizable.strings
+++ b/FilmStock/de.lproj/Localizable.strings
@@ -72,12 +72,12 @@
 "empty.noFilms.title" = "Noch keine Filme";
 "empty.noFilms.message" = "Füge deinen ersten Film hinzu, um zu beginnen!";
 "empty.noLoadedFilms.title" = "Keine eingelegten Filme";
-"empty.noLoadedFilms.message" = "Lege einen Film aus dem Tab 'Meine Filme' ein, um zu verfolgen, welche Rollen derzeit verwendet werden";
-"empty.noCollection.title" = "Noch keine Film-Erinnerungskarten";
+"empty.noLoadedFilms.message" = "Lege einen Film aus dem Tab 'Meine Filme' ein, um zu verfolgen, welche Rollen derzeit in deiner/deinen Kamera(s) sind";
+"empty.noCollection.title" = "Noch keine film-erinnerungskarten";
 "empty.noCollection.message" = "Lade deine eigenen Film-Erinnerungen hoch, wenn du einen Film hinzufügst oder bearbeitest, und starte deine eigene Sammlung!";
 "empty.noCatalogImages.title" = "Keine Bilder verfügbar";
-"empty.noCatalogImages.message" = "Keine Standardbilder im Bundle gefunden";
-"empty.noCustomPhotos.title" = "Keine eigenen Fotos";
+"empty.noCatalogImages.message" = "Keine Bilder im Katalog gefunden";
+"empty.noCustomPhotos.title" = "Keine Filmkarten-Fotos";
 "empty.noCustomPhotos.message" = "Fotografiere deine Filmschachteln beim Hinzufügen von Filmen, um deine Sammlung aufzubauen";
 
 // MARK: - Filters & Search
@@ -104,8 +104,8 @@
 "alert.deleteImage.title" = "Bild löschen";
 "alert.deleteImage.single" = "Möchtest du das Bild für %@ wirklich löschen?";
 "alert.deleteImage.multiple" = "Möchtest du wirklich %d Bild(er) löschen?";
-"alert.unload.title" = "Film entnehmen";
-"alert.unload.message" = "Möchtest du %@ wirklich entnehmen?";
+"alert.unload.title" = "%@ entnehmen";
+"alert.unload.message" = "Bist du fertig mit deiner Rolle %@?";
 
 // MARK: - Settings
 "settings.title" = "Einstellungen";
@@ -128,31 +128,31 @@
 "about.appName" = "FilmStock";
 "about.version" = "Version %@";
 "about.tagline" = "Dein persönlicher Filmsammlungs-Manager";
-"about.description" = "FilmStock hilft dir, den Überblick über deine analoge Filmsammlung zu behalten, eingelegte Filme in deinen Kameras zu verwalten und nie den Überblick über deine Lieblingsfilme zu verlieren.";
+"about.description" = "FilmStock hilft dir, deine Filmsammlung zu verwalten, eingelegte Filme in deinen Kameras zu organisieren und nie den Überblick zu verlieren, was in deiner Kamera und was in deinem Kühlschrank ist. Feedback oder vergessene Hersteller? Lass es mich wissen!";
 "about.developedBy" = "Entwickelt von";
-"about.contactUs" = "Kontaktiere uns";
+"about.contactUs" = "Kontaktiere mich";
 "about.emailError.title" = "E-Mail nicht verfügbar";
-"about.emailError.message" = "Kontaktiere uns unter hello@halbe.no";
+"about.emailError.message" = "Bitte kontaktiere mich unter hello@halbe.no";
 "about.emailNotAvailable.title" = "E-Mail nicht verfügbar";
-"about.emailNotAvailable.message" = "Kontaktiere uns unter hello@halbe.no";
+"about.emailNotAvailable.message" = "Bitte kontaktiere mich unter hello@halbe.no";
 
 // MARK: - Support / Buy Me a Coffee
 "support.title" = "Unterstützung";
 "support.buyMeCoffee" = "Spendier mir einen Kaffee";
-"support.description" = "Unterstütze die Entwicklung";
+"support.description" = "Sag danke";
 "support.header" = "FilmStock unterstützen";
 "support.message" = "Wenn dir FilmStock gefällt, erwäge die Entwicklung mit einem kleinen Beitrag zu unterstützen.";
 "support.message.withPrice" = "Wenn dir FilmStock gefällt, erwäge die Entwicklung mit einem kleinen Beitrag von %@ zu unterstützen.";
-"support.benefits" = "Deine Unterstützung hilft, die App auf dem neuesten Stand zu halten, neue Funktionen hinzuzufügen und sicherzustellen, dass FilmStock weiterhin die beste Film-Verwaltungs-App bleibt.";
+"support.benefits" = "Diese App ist kostenlos und wird immer kostenlos bleiben. Deine Unterstützung hilft mir, die App auf dem neuesten Stand zu halten, neue Funktionen hinzuzufügen und sicherzustellen, dass FilmStock weiterhin die beste Film-Verwaltungs-App bleibt.";
 "support.button.withPrice" = "Spendier mir einen Kaffee (%@)";
 "support.loading" = "Lädt...";
 "support.selectAmount" = "Wähle einen Betrag:";
 "support.restore" = "Käufe wiederherstellen";
 "support.thankYou.title" = "Vielen Dank!";
-"support.thankYou.message" = "Deine Unterstützung bedeutet mir sehr viel. Ich weiß das wirklich zu schätzen!";
+"support.thankYou.message" = "Deine Unterstützung bedeutet mir viel. Ich weiß das wirklich zu schätzen!";
 "support.confirm.title" = "Unterstützung bestätigen";
-"support.confirm.message" = "Dies wird einen Unterstützungsbeitrag von %@ kaufen. Vielen Dank für deine Großzügigkeit!";
-"support.confirm.message.noPrice" = "Dies wird einen Unterstützungsbeitrag kaufen. Vielen Dank für deine Großzügigkeit!";
+"support.confirm.message" = "Dies wird einen Unterstützungsbeitrag von %@ kaufen. Vielen Dank!";
+"support.confirm.message.noPrice" = "Dies wird einen Unterstützungsbeitrag kaufen. Vielen Dank!";
 "support.confirm" = "Ja, FilmStock unterstützen";
 "support.error.productNotAvailable" = "Produkt nicht verfügbar. Bitte versuche es später erneut.";
 "support.error.verificationFailed" = "Kaufüberprüfung fehlgeschlagen: %@";
@@ -161,13 +161,13 @@
 "support.error.failed" = "Kauf fehlgeschlagen: %@";
 
 // MARK: - Delete Confirmations  
-"delete.film.title" = "Film löschen";
-"delete.film.message" = "Möchtest du %@ wirklich löschen?";
+"delete.film.title" = "Film entfernen";
+"delete.film.message" = "Möchtest du %@ wirklich entfernen?";
 "delete.image.title" = "Bild löschen";
 
 // MARK: - Error Messages
-"error.cannotDelete.title" = "Film kann nicht gelöscht werden";
-"error.cannotDeleteLoaded" = "\"%@\" ist derzeit in einer Kamera eingelegt. Bitte nimm ihn zuerst heraus, bevor du ihn löschst.";
+"error.cannotDelete.title" = "Film kann nicht entfernt werden";
+"error.cannotDeleteLoaded" = "\"%@\" ist derzeit in einer Kamera eingelegt. Bitte nimm ihn zuerst heraus, bevor du ihn entfernst.";
 
 // MARK: - Load Film
 "load.title" = "Film einlegen";
@@ -180,14 +180,14 @@
 "load.noFormatsAvailable" = "Keine Formate verfügbar";
 "load.rollsAvailable" = "Rolle(n) verfügbar";
 "load.sheetsAvailable" = "Blatt/Blätter verfügbar";
-"load.loadedSuccessfully" = "Film erfolgreich eingelegt!";
+"load.loadedSuccessfully" = "Film eingelegt, viel Spaß!";
 "load.cameraRequired" = "Bitte wähle eine Kamera aus";
 "load.formatRequired" = "Bitte wähle ein Format aus";
 "load.addNewCamera" = "Neue Kamera hinzufügen";
 "load.enterCameraName" = "Kameraname eingeben";
 "load.cameraName" = "Kameraname";
 "load.addCamera" = "Kamera hinzufügen";
-"load.quantityToLoad" = "Zu ladende Menge";
+"load.quantityToLoad" = "Anzahl zum Einlegen";
 
 // MARK: - Cameras
 "camera.title" = "Kameras";
@@ -203,25 +203,25 @@
 "detail.loadedAt" = "Eingelegt";
 
 // MARK: - Onboarding
-"onboarding.welcome.title" = "Willkommen bei FilmStock";
+"onboarding.welcome.title" = "Willkommen bei FilmStock!";
 "onboarding.welcome.subtitle" = "Dein persönlicher Analogfilm-Manager";
 "onboarding.feature1.title" = "Verfolge deine Sammlung";
-"onboarding.feature1.description" = "Behalte den Überblick über all deine Filmrollen, Planfilme und Formate an einem Ort";
+"onboarding.feature1.description" = "Behalte den Überblick über all deine Filmrollen, Planfilme und Formate - sowohl in deinem Kühlschrank als auch in deiner Kamera";
 "onboarding.feature2.title" = "Eingelegte Filme verwalten";
-"onboarding.feature2.description" = "Wisse genau, welche Filme in welchen Kameras eingelegt sind";
-"onboarding.feature3.title" = "Eigene Film-Karten";
-"onboarding.feature3.description" = "Fotografiere deine Filmschachteln zur schnellen visuellen Referenz";
+"onboarding.feature2.description" = "Wisse genau, welche Filme in welchen Kameras eingelegt sind und wann. ISO oder Ablaufdatum vergessen? Ich helfe dir!";
+"onboarding.feature3.title" = "Eigene Film-Erinnerungskarten";
+"onboarding.feature3.description" = "Fotografiere deine Filmschachteln und füge sie deiner Sammlung hinzu. Du kannst auch deinen eigenen Film-Erinnerungshalter auf deinen Homescreen legen - füge einfach das FilmStock-Widget hinzu und sieh, was gerade in deiner Kamera ist.";
 "onboarding.getStarted" = "Los geht's";
 "onboarding.tooltip.addFilm.title" = "Füge deinen ersten Film hinzu";
-"onboarding.tooltip.addFilm.message" = "Tippe hier, um einen Film zu deiner Sammlung hinzuzufügen. Du kannst verschiedene Formate, Verfallsdaten verfolgen und sogar Fotos deiner Filmschachteln hinzufügen!";
+"onboarding.tooltip.addFilm.message" = "Tippe hier, um einen Film aus deinem Vorrat hinzuzufügen. Du kannst verschiedene Formate, Ablaufdaten verfolgen und sogar Fotos deiner eigenen Erinnerungskarten hinzufügen!";
 "onboarding.tooltip.filter.title" = "Filtere deine Filme";
 "onboarding.tooltip.filter.message" = "Verwende Filter, um deine Sammlung nach Typ, Format oder Hersteller zu organisieren. Schalte 'Leere ausblenden' ein, um nur Filme anzuzeigen, die du auf Lager hast.";
 
 // MARK: - Help
-"help.collection.title" = "Über Meine Sammlung";
-"help.collection.message" = "Dies ist deine Galerie mit eigenen Film-Erinnerungskarten-Fotos. Wenn du ein Foto mit der Kamera-Taste beim Hinzufügen oder Bearbeiten eines Films aufnimmst, erscheint es hier. Diese Fotos helfen dir, dich zu erinnern, wie deine Filmschachteln aussehen, und können zur schnellen Identifizierung nützlich sein. Du kannst Bilder löschen, die du nicht mehr benötigst.";
-"help.loadedFilms.title" = "Über Eingelegte Filme";
-"help.loadedFilms.message" = "Diese Ansicht zeigt alle derzeit in deinen Kameras eingelegten Filme. Wenn du einen Film aus dem Tab 'Meine Filme' einlegst, erscheint er hier zusammen mit dem Kameranamen und dem Ladedatum. Wische nach links, um einen Film zu entnehmen (wodurch er zu deinem Filmbestand zurückgegeben wird). Dies hilft dir zu verfolgen, welche Filme aktiv verwendet werden, und verhindert das versehentliche doppelte Einlegen desselben Films.";
+"help.collection.title" = "Meine Sammlung";
+"help.collection.message" = "Dies ist deine Galerie mit eigenen Film-Erinnerungskarten-Fotos. Wenn du ein Foto mit der Kamera beim Hinzufügen oder Bearbeiten eines Films aufnimmst, erscheint es hier. Diese Fotos helfen dir, dich zu erinnern, wie deine Filmschachteln aussehen, und können zur schnellen Identifizierung nützlich sein. Du kannst Bilder löschen, die du nicht mehr benötigst, oder sie wiederverwenden, wenn du deinen Lieblingsfilm nachbestellst.";
+"help.loadedFilms.title" = "Eingelegte Filme";
+"help.loadedFilms.message" = "Diese Ansicht zeigt alle derzeit in deinen Kameras eingelegten Filme. Wenn du einen Film aus dem Tab 'Meine Filme' einlegst, erscheint er hier zusammen mit dem Kameranamen und dem Ladedatum. Wische nach links auf einen Film, um ihn zu entnehmen, wenn du deine Rolle fertig hast.";
 
 // MARK: - Accessibility
 "accessibility.filmImage" = "Filmbild";
